Changing underlying storage to any `PinnedVec`
* Instead of hard-coded `SplitVec`, the concurrent bag now wraps any `PinnedVec`.
* `capacity` method is added.
* `Debug` is implemented.
* Benchmarks added and reported.
* `AtomicUsize` is used for capacity rather than `usize`. This update does not lead to diminished performance.
* Memory orderings of atomic operations are strengthened.
* `UnsafeCell` is used for the pinned vector, rather than direct cast.
* Tests extended.

# Inside the push

In the prior version, growth of the bag required two operations:
* setting length of the pinned vector to its capacity, and
* growing the pinned vector to its next size.

The reason the first operation is required is due to the fact that the second operation can only succeed when vector is at its capacity; i.e., `len == capacity`.

Having to make two mutations is not good for heavy load situations. `grow_to` method, on the other hand, does not require the pinned vector to be at its length, and hence, we do not need to make the `set_len` call. Furthemore, it will be required for a possible `extend` implementation.

# Also

* Errors are organized.
* Memory orderings are strengthened.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "orx-concurrent-vec"
-version = "1.0.0"
+version = "1.1.0"
 edition = "2021"
 authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
 description = "An efficient, convenient and lightweight thread-safe grow-only read-and-write collection, ideal for collecting results concurrently."
@@ -10,8 +10,9 @@ keywords = ["concurrency", "vec", "data-structures", "collect"]
 categories = ["data-structures", "concurrency", "rust-patterns"]
 
 [dependencies]
-orx-pinned-vec = "2.2"
-orx-split-vec = "2.3"
+orx-fixed-vec = "2.5"
+orx-pinned-vec = "2.5"
+orx-split-vec = "2.6"
 
 [dev-dependencies]
 criterion = "0.5.1"
