--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "orx-concurrent-vec"
-version = "1.7.0"
+version = "1.8.0"
 edition = "2021"
 authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
 description = "An efficient, convenient and lightweight grow-only read & write concurrent data structure allowing high performance concurrent collection."
@@ -10,11 +10,11 @@ keywords = ["concurrency", "vec", "data-structures", "atomic", "lock-free"]
 categories = ["data-structures", "concurrency", "rust-patterns"]
 
 [dependencies]
-orx-concurrent-bag = "1.13"
-orx-fixed-vec = "2.9"
-orx-pinned-concurrent-col = "1.2"
-orx-pinned-vec = "2.9"
-orx-split-vec = "2.11"
+orx-concurrent-bag = "1.14"
+orx-fixed-vec = "2.11"
+orx-pinned-concurrent-col = "1.4"
+orx-pinned-vec = "2.11"
+orx-split-vec = "2.13"
 
 [dev-dependencies]
 criterion = "0.5.1"
@@ -23,5 +23,5 @@ rayon = "1.9.0"
 test-case = "3.3.1"
 
 [[bench]]
-name = "collect_with_push"
+name = "collect_with_extend"
 harness = false
