--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "orx-concurrent-vec"
-version = "1.10.0"
+version = "2.0.0"
 edition = "2021"
 authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
 description = "An efficient, convenient and lightweight grow-only read & write concurrent data structure allowing high performance concurrent collection."
@@ -10,13 +10,15 @@ keywords = ["concurrency", "vec", "data-structures", "atomic", "lock-free"]
 categories = ["data-structures", "concurrency", "rust-patterns"]
 
 [dependencies]
-orx-concurrent-bag = "1.16"
-orx-fixed-vec = "2.12"
-orx-pinned-concurrent-col = "1.6"
-orx-pinned-vec = "2.12"
-orx-split-vec = "2.14"
+orx-pseudo-default = "1.0"
+orx-fixed-vec = "3.0"
+orx-pinned-vec = "3.0"
+orx-split-vec = "3.0"
+orx-pinned-concurrent-col = "2.0"
+orx-concurrent-ordered-bag = "2.0"
 
 [dev-dependencies]
+orx-concurrent-bag = "2.0"
 criterion = "0.5.1"
 rand = "0.8.5"
 rayon = "1.9.0"
