broken benchmarks fixed
Broken benchmarks after the major revision are fixed, re-run and added to the documentation.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "orx-concurrent-vec"
-version = "2.4.0"
+version = "2.4.1"
 edition = "2021"
 authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
 description = "An efficient, convenient and lightweight grow-only read & write concurrent data structure allowing high performance concurrent collection."
@@ -23,6 +23,7 @@ criterion = "0.5.1"
 rand = "0.8.5"
 rayon = "1.9.0"
 test-case = "3.3.1"
+append-only-vec = "0.1.5"
 
 [[bench]]
 name = "collect_with_extend"
