--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,14 +11,15 @@ categories = ["data-structures", "concurrency", "rust-patterns", "no-std"]
 
 [dependencies]
 orx-pseudo-default = { version = "1.4", default-features = false }
-orx-pinned-vec = "3.8"
-orx-fixed-vec = "3.8"
-orx-split-vec = "3.8"
+orx-pinned-vec = "3.9"
+orx-fixed-vec = "3.9"
+orx-split-vec = "3.9"
 orx-pinned-concurrent-col = "2.7"
-orx-concurrent-option = "1.1"
+# orx-concurrent-option = "1.1"
+orx-concurrent-option = { path = "../orx-concurrent-option" }
 
 [dev-dependencies]
-orx-concurrent-bag = "2.6"
+orx-concurrent-bag = "2.7"
 criterion = "0.5.1"
 rand = "0.8.5"
 rayon = "1.9.0"
