--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "orx-concurrent-vec"
-version = "3.2.0"
+version = "3.3.0"
 edition = "2021"
 authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
 description = "A thread-safe, efficient and lock-free vector allowing concurrent grow, read and update operations."
@@ -11,22 +11,23 @@ categories = ["data-structures", "concurrency", "rust-patterns", "no-std"]
 
 [dependencies]
 orx-pseudo-default = { version = "1.4", default-features = false }
-orx-pinned-vec = "3.11"
-orx-fixed-vec = "3.11"
-orx-split-vec = "3.11"
-orx-pinned-concurrent-col = "2.9"
+orx-pinned-vec = "3.12"
+orx-fixed-vec = "3.12"
+orx-split-vec = "3.12"
+orx-pinned-concurrent-col = "2.10"
 orx-concurrent-option = "1.3"
 serde = { version = "1.0.217", optional = true, default-features = false }
 
 [dev-dependencies]
-append-only-vec = "0.1.5"
-boxcar = "0.2.5"
-clap = { version = "4.5.17", features = ["derive"] }
+append-only-vec = "0.1.7"
+boxcar = "0.2.8"
+clap = { version = "4.5.27", features = ["derive"] }
 criterion = "0.5.1"
-rand = "0.8"
-rand_chacha = "0.3"
-rayon = "1.9.0"
-serde_json = { version = "1.0.135", default-features = false, features = [
+orx-iterable = "1.1.1"
+rand = "0.9.0"
+rand_chacha = "0.9.0"
+rayon = "1.10.0"
+serde_json = { version = "1.0.138", default-features = false, features = [
     "std",
 ] }
 test-case = "3.3.1"
