--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,27 +1,27 @@
 [package]
 name = "orx-concurrent-vec"
-version = "3.3.0"
+version = "3.4.0"
 edition = "2021"
 authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
 description = "A thread-safe, efficient and lock-free vector allowing concurrent grow, read and update operations."
-license = "MIT"
+license = "MIT OR Apache-2.0"
 repository = "https://github.com/orxfun/orx-concurrent-vec/"
 keywords = ["concurrency", "vec", "data-structures", "atomic", "lock-free"]
 categories = ["data-structures", "concurrency", "rust-patterns", "no-std"]
 
 [dependencies]
 orx-pseudo-default = { version = "1.4", default-features = false }
-orx-pinned-vec = "3.12"
-orx-fixed-vec = "3.12"
-orx-split-vec = "3.12"
-orx-pinned-concurrent-col = "2.10"
-orx-concurrent-option = "1.3"
+orx-pinned-vec = "3.14"
+orx-fixed-vec = "3.14"
+orx-split-vec = "3.14"
+orx-pinned-concurrent-col = "2.11"
+orx-concurrent-option = "1.4"
 serde = { version = "1.0.217", optional = true, default-features = false }
 
 [dev-dependencies]
 append-only-vec = "0.1.7"
 boxcar = "0.2.8"
-clap = { version = "4.5.27", features = ["derive"] }
+clap = { version = "4.5.28", features = ["derive"] }
 criterion = "0.5.1"
 orx-iterable = "1.1.1"
 rand = "0.9.0"
