--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,10 @@ categories = ["data-structures", "concurrency", "rust-patterns", "no-std"]
 
 [dependencies]
 orx-pseudo-default = { version = "2.0.0", default-features = false }
-orx-pinned-vec = "3.15"
-orx-fixed-vec = "3.15"
-orx-split-vec = "3.15"
-orx-pinned-concurrent-col = "2.12"
+orx-pinned-vec = { path = "../orx-pinned-vec" }
+orx-fixed-vec = { path = "../orx-fixed-vec" }
+orx-split-vec = { path = "../orx-split-vec" }
+orx-pinned-concurrent-col = { path = "../orx-pinned-concurrent-col" }
 orx-concurrent-option = "1.4"
 serde = { version = "1.0.217", optional = true, default-features = false }
 
