--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "orx-concurrent-vec"
-version = "4.0.0"
+version = "3.6.0"
 edition = "2024"
 authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
 description = "A thread-safe, efficient and lock-free vector allowing concurrent grow, read and update operations."
@@ -10,24 +10,24 @@ keywords = ["concurrency", "vec", "data-structures", "atomic", "lock-free"]
 categories = ["data-structures", "concurrency", "rust-patterns", "no-std"]
 
 [dependencies]
-orx-pseudo-default = { path = "../orx-pseudo-default", default-features = false }
-orx-pinned-vec = { path = "../orx-pinned-vec" }
-orx-fixed-vec = { path = "../orx-fixed-vec" }
-orx-split-vec = { path = "../orx-split-vec" }
-orx-pinned-concurrent-col = { path = "../orx-pinned-concurrent-col" }
-orx-concurrent-option = { path = "../orx-concurrent-option" }
-serde = { version = "1.0.217", optional = true, default-features = false }
+orx-pseudo-default = { version = "2.1.0", default-features = false }
+orx-pinned-vec = "3.16.0"
+orx-fixed-vec = "3.16.0"
+orx-split-vec = "3.16.0"
+orx-pinned-concurrent-col = "2.13.0"
+orx-concurrent-option = "1.5.0"
+serde = { version = "1.0.219", optional = true, default-features = false }
 
 [dev-dependencies]
 append-only-vec = "0.1.7"
-boxcar = "0.2.8"
-clap = { version = "4.5.28", features = ["derive"] }
+boxcar = "0.2.11"
+clap = { version = "4.5.35", features = ["derive"] }
 criterion = "0.5.1"
-orx-iterable = { path = "../orx-iterable", default-features = false }
+orx-iterable = { version = "1.3.4", default-features = false }
 rand = "0.9.0"
 rand_chacha = "0.9.0"
 rayon = "1.10.0"
-serde_json = { version = "1.0.138", default-features = false, features = [
+serde_json = { version = "1.0.140", default-features = false, features = [
     "std",
 ] }
 test-case = "3.3.1"
