--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,13 +19,15 @@ jobs:
         features: ["", "--features serde"]
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v5
 
     - name: Install toolchain
-      uses: dtolnay/rust-toolchain@master
+      uses: dtolnay/rust-toolchain@stable
       with:
         toolchain: ${{ matrix.toolchain }}
 
+    - name: Install clippy
+      run: rustup component add clippy
     - name: Install 32bit target
       run: rustup target add i686-unknown-linux-musl
     - name: Install wasm target
